Fixed : tile content was overlapping the icon.

--- a/src/app/shared/components/tile/tile.component.scss
+++ b/src/app/shared/components/tile/tile.component.scss
@@ -1,24 +1,8 @@
 @import "../../../../styles/variables";
 
-$colors : red green yellow orange;
-
-.tile-stats{
-  @each $color in $colors{
-    &.backColor-#{$color}{
-      background-color:#{$color};
-    }
-  }
-  .fahrenHeight{
-    font-size: 67px;
-  }
-
-  .relativeHumidity{
-    @extend .fahrenHeight;
-    color: $color-red;
-  }
-  .title{
-    font-size: 18px;
-  }
+.tile-container {
+  display: flex;
+  height: 100%;
 }
 
 .widget-panel {
@@ -29,6 +13,7 @@ $colors : red green yellow orange;
   margin-bottom: 20px;
   cursor: pointer;
   min-height: 13.75rem;
+  flex-grow: 1;
 
   @media (min-width: $phone-small) and (max-width: $tablet-large){
     padding: 10px;
@@ -37,16 +22,27 @@ $colors : red green yellow orange;
 }
 
 .widget-style-2 {
-  font-family: "roboto_thin";
+  font-family: "roboto_thin", "Helvetica Neue", Roboto, Arial, "Droid Sans", sans-serif;
+  font-size: 1em;
 
-  .counter {
-    font-weight: 600;
-    font-size: 2em;
-    text-shadow: 2px 2px 2px $color-grey-verydark;
+  @media (min-width: $phone-small) and (max-width: $tablet-large) {
+    font-size: 0.75em;
+    padding: 5px !important;
+    margin-bottom: 5px;
+    min-height: auto;
+  }
 
-    @media (min-width: $phone-small) and (max-width: $tablet-large) {
-      font-size: 1.5em;
-    }
+  @media (min-width: 767px) {
+    // padding-left: 30px;
+  }
+
+  @media (max-width: 767px) {
+    padding: 30px;
+    margin-bottom: 10px;
+  }
+
+  &.special {
+    font-size: 18px;
   }
 
   i:not(.special) {
@@ -69,31 +65,32 @@ $colors : red green yellow orange;
     }
   }
 
-  .fahrenHeight {
-    font-size: 1.15em;
-    font-weight: 800;
-    text-shadow: 2px 2px 2px $color-grey-verydark;
-  }
+  .tile-details {
+    width: 75%;
 
-  @media (min-width: $phone-small) and (max-width: $tablet-large) {
-    font-size: 0.75em;
-    padding: 5px !important;
-    margin-bottom: 5px;
-    min-height: auto;
-  }
+    .tile-counter {
+      font-weight: 600;
+      font-size: 2em;
+      text-shadow: 2px 2px 2px $color-grey-verydark;
 
-  @media (min-width: 767px) {
-    padding-left: 30px;
-  }
+      @media (min-width: $phone-small) and (max-width: $tablet-large) {
+        font-size: 1.5em;
+      }
+    }
 
-  @media (max-width: 767px) {
-    padding: 30px;
-    margin-bottom: 10px;
-  }
+    .tile-fahrenHeight {
+      font-size: 1.15em;
+      font-weight: 800;
+      text-shadow: 2px 2px 2px $color-grey-verydark;
+    }
 
+    .tile-relativeHumidity {}
 
-  &.special {
-    font-size: 18px;
+    .tile-content {}
+
+    .tile-dateTime {
+      font-size: 0.8em;
+    }
   }
 }
 
